--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,10 +26,19 @@
                     </div>
                     <ul class="nav navbar-nav navbar-right">
                           <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                          <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                          <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                     </ul>
               </div>
         </nav>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <ul>
+                    {% for message in messages %}
+                        <li>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
         {% block content %}{% endblock %}
     </body>
 </html>
