logout added, user authentication, openid signin

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,6 +27,9 @@
                     <ul class="nav navbar-nav navbar-right">
                           <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
                           <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                          {% if g.user.is_authenticated %}
+                                <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                          {% endif %}
                     </ul>
               </div>
         </nav>
